--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -56,13 +56,13 @@
                 </div>
 
                 <div class="col-12">
-                    <div class="mb-3">
-                        <label for="formFile" class="form-label">이미지등록</label>
-                        <input class="form-control" name="multipartFile" type="file" >
-                        <input class="form-control" name="multipartFile" type="file" >
-                        <input class="form-control" name="multipartFile" type="file" >
-                        <input class="form-control" name="multipartFile" type="file" >
-                        <input class="form-control" name="multipartFile" type="file" >
+                    <div class="mb-3 imgA">
+                        <label for="formFile" class="form-label">대표이미지</label>
+                        <input class="form-control imgInput mainimg" id="formFile" accept="image/*" name="multipartFile" type="file" >
+
+                        <button class="btn btn-dark mt-3 mb-3 addImg" type="button">이미지추가</button>
+
+
 
                     </div>
                 </div>
@@ -87,17 +87,51 @@
 
             $("form").on("submit", function (e) {
 
-                if(nameValid()){
-                    return false
+                if(itemNmValid()){
+                    return false;
+                }
+                if ($(".imgInput").first().val()==""){
+                    alert("대표이미지를 넣어주세요")
+                    return false;
                 }
             })
 
             function itemNmValid() {
                 let itemNmVal = $("#itemNm").val()
                 if (itemNmVal.length < 2 || itemNmVal.length >50){
+                    alert("이름을 입력해주세요")
+                    alert($(".imgInput").first().val())
                     return true
                 }
             }
+
+            $(".addImg").on("click", function () {
+                let src = `<input class="form-control imgInput" name="multipartFile" type="file" >`
+                $(".imgA").append(src)
+            })
+
+            bindDomEvent()
+            // 이미지 파일 유효성 검사
+            function bindDomEvent() {
+                $(".imgA").on("change","input" ,function () {
+                    alert($(this.val()))
+                    let fileName = $(this).val().split("\\").pop()  // 이미지 파일명
+                    // 이미지파일명의 확장자를 추출해서 확인한다.
+                    // dog.jpg
+                    let fileExt = fileName.substring(fileName.lastIndexOf(".")+1)
+                    if (fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp"){
+
+                        $(this).val("")
+                        alert("이미지 파일만 넣어주세요")
+                        return false;
+                    }
+
+
+                })
+            }
+
+
+
         })
 
 
