--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -18,7 +18,7 @@
                     <div class="col-12">
                         <div class="mb-3">
                             <label for="itemNm" class="form-label">상품명</label>
-                            <input type="text" class="form-control" th:field="*{itemNm}" id="itemNm" >
+                            <input type="text" class="form-control" th:field="*{itemNm}"  required id="itemNm" >
                             <p th:if="${#fields.hasErrors('itemNm')}" th:errors="*{itemNm}" class="fieldError"></p>
 
                         </div>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-12">
                         <div class="mb-3">
-                            <label for="stockNumber" class="form-label">재고 수량</label>
+                            <label for="stockNumber"  class="form-label">재고 수량</label>
                             <input type="number" min="0" class="form-control" th:field="*{stockNumber}" id="stockNumber">
                             <p th:if="${#fields.hasErrors('stockNumber')}" th:errors="*{stockNumber}" class="fieldError"></p>
 
@@ -50,34 +50,38 @@
                     <div class="col-12">
                         <div class="mb-3">
                             <label for="itemSellStatus" class="form-label">상품 판매 상태 </label>
-                            <select th:field="*{itemSellStatus}" id="itemSellStatus" class="form-select" aria-label="Default select example">
+                            <select  th:field="*{itemSellStatus}" id="itemSellStatus" class="form-select" aria-label="Default select example">
                                 <option value="SELL">판매중</option>
                                 <option value="SOLD_OUT">품절</option>
                             </select>
                         </div>
                     </div>
-
+                    <!--이미지 미리보기-->
                     <div class="col-12">
+
+                        <div class="row  main imgpreview">
+
+                        </div>
+
+                        <div class="row row-cols-md-3 imgpreviewinput imgpreview">
+
+                        </div>
+
                         <div class="mb-3 imgA">
                             <label for="formFile" class="form-label">대표이미지</label>
-                            <input class="form-control imgInput mainimg" id ="formFile" accept="image/*" name="multipartFile" type="file">
+                            <input class="form-control imgInput mainimg"  id="formFile" accept="image/*" name="multipartFile" type="file" >
 
-                            <button class="btn btn-dark mt-3 mb-3 addimg"  type="button">이미지추가</button>
-
-
+                            <label for="formFilede" class="form-label">상세 이미지</label>
+                            <input class="form-control imgInput "  id="formFilede" accept="image/*" name="multipartFile" type="file" >
                         </div>
                     </div>
 
-
-
                     <div class="col-12">
-                        <button class="btn btn-dark">저장</button>
-                        <button type="button">목록</button>
+                       <button class="btn btn-dark">저장</button>
+                       <button type="button">목록</button>
                     </div>
                 </div>
             </div>
-
-        </div>
         </div>
     </form>
 
@@ -86,69 +90,166 @@
 
 <th:block layout:fragment="script">
 
-    <script>
-        $(document).ready(function (){
-
-            $("form").on("submit", function (e){
-                if(itemNmValid()){
-                    return false
-                }
-
-                if($(".imgInput").first().val() == ""){
-                    //$(".mainimg").val() ==
-                    //대표이미지가 없을 경우
-                    alert("대표이미지를 넣어주세요")
-                    return false
-                }
+   <script th:inline="javascript">
+       $(document).ready(function () {
+           let msg = [[${msg}]]
+           if(msg!=null){
+               alert(msg)
+           }
 
 
-            })
+           $("form").on("submit", function (e) {
+               if(itemNmValid()){
+                   return false
+               }
+               if($(".main").find('input:eq(0)')  == ""){
+                   //  $(".mainimg").val()==""
+                   //대표이미지가 없을경우
+                   alert("대표이미지를 넣어주세요")
 
-            function itemNmValid(){
-                let itemNmVal = $("#itemNm").val()
-                if(itemNmVal.length < 2 || itemNmVal.length > 50) {
-                    return true
-                }
-            }
-
-            $(".addimg").on("click", function (){
-                let str = '<input className="form-control imgInput" name="multipartFile" type="file">'
-                $(".imgA").append(str)
-
-            })
-
-
-            bindDomEvent()
-            //이미지 파일 유효성 검사
-            function bindDomEvent() {
-                $(".imgA").on("change", "input", function () {
-                    let fileName = $(this).val().split("\\").pop() //이미지 파일명
-                    //이미지파일명의 확장자를 추출해서 확인한다.
-                    //dog.jpg
-
-                    let fileExt = fileName.substring(fileName.lastIndexOf(".") + 1)
-                    //확장자 소문자로 변환
-
-                    fileExt = fileExt.toLowerCase() //이미지파일 소문자로 변환
-
-                    if (fileExt != "jpg" && fileExt != "jpeg" && fileExt != "gif" && fileExt != "png" && fileExt != "bmp") {
-
-                        $(this).val("")
-                        alert("이미지 파일만 넣어주세요")
-                        return false;
-
-                    }
-                })
-            }
+                   return false
+               }
 
 
 
-        })
-    </script>
+           })
+           function itemNmValid() {
+               let itemNmVal = $("#itemNm").val()
+               if(itemNmVal.length < 2 || itemNmVal.length > 50){
+                   alert("이름을 입력해주세요")
+                   alert($(".imgInput").first().val())
+                   return true
+               }
+           }
+
+           // $(".addimg").on("click", function () {
+           //     let str = '<input class="form-control imgInput" accept="image/*" name="multipartFile" type="file" >'
+           //     $(".imgA").append(str)
+           //
+           //
+           // })
+
+           $(".imgpreview").on("click", "button", function () {
+
+               $(this).parent().remove()
+
+
+           })
+
+           bindDomEvent()
+           //이미지 파일 유효성 검사
+           function bindDomEvent() {
+               $(".imgA").on("change", "input", function () {
+                   let fileName = $(this).val().split("\\").pop() //이미지 파일명
+                   //이미지파일명의 확장자를 추출해서 확인하다.
+                   //dog.jpg
+
+                   let fileExt = fileName.substring(fileName.lastIndexOf(".") +1 )
+                   //확장자 소문자로 변환
+
+                   fileExt = fileExt.toLowerCase()
+
+                   if(fileExt != "jpg" && fileExt != "jpeg" && fileExt != "jfif" &&
+                       fileExt != "gif" && fileExt != "png" && fileExt != "bmp"){
+
+                       $(this).val("")
+                       alert("이미지 파일만 넣어주세요")
+                       return false;
+                   }
+
+                   //이상이 없다면 이미지 미리보기 추가
+                   if(this.classList.contains("mainimg")){
+                       //클래스중에 mainimg가 있다면
+                       console.log("이건 대표이미지 인풋입니다.")
+                       readURL(this);
+                       $(".mainimg").val()
+
+                   }else {
+                       readURL1(this);
+
+
+                   }
+
+
+
+               })
+           }
+           function readURL(input) {
+               if (input.files && input.files[0]) {
+
+                   var reader = new FileReader();
+                   reader.onload = function(e) {
+                       let inputtag = document.createElement("input")
+
+                       inputtag.type = "file"
+                       inputtag.name = "multipartFile"
+                       // inputtag.files = input.files
+                       const dataTranster = new DataTransfer();
+                       const fileDatas = Array.from(input.files);
+                       /*신규 파일데이터는..
+                       new DataTransfer();
+                       이걸로 files 라는 객체를 만들수 있어서..
+                       이걸로 만들어서 배열 돌리면서 추가추가 한거임*/
+                       fileDatas.forEach(file =>  dataTranster.items.add(file) );
+                       inputtag.files = dataTranster.files;
+
+                       let str1 = ` <div class="preview col">
+                                  <img width="100%" src="${e.target.result}">
+                                  <button type='button' class='bb'>올리지 않기</button>
+                                    </div>`
+                       $(".main").html(str1)
+                       $(".main").find('div:eq(0)').append(inputtag)
+                       $(".main").find('input').hide()
+                       $(".imgInput").val("")
+
+                   };
+                   reader.readAsDataURL(input.files[0]);
+
+
+               }
+           }
+           function readURL1(input) {
+               if (input.files && input.files[0]) {
+
+                   var reader = new FileReader();
+                   reader.onload = function(e) {
+                       let inputtag = document.createElement("input")
+                       inputtag.type = "file"
+                       inputtag.name = "multipartFile"
+                       /*inputtag.files = input.files*/
+                       const dataTranster = new DataTransfer();
+                       const $fileDatas = Array.from(input.files);
+                       $fileDatas.forEach(file =>  dataTranster.items.add(file) );
+                       inputtag.files = dataTranster.files;
+
+                       let str1 = ` <div class="preview col">
+                                  <img width="100%" src="${e.target.result}">
+                                  <button type='button' class='bb'>올리지 않기</button>
+                                </div>`
+                       $(".imgpreviewinput").prepend(str1)
+                       // $(".imgpreviewinput").append(str)
+                       $(".imgpreviewinput").find('div:eq(0)').prepend(inputtag)
+                       $(".imgpreviewinput").find('input:eq(0)').hide()
+
+                       $(".imgInput").val("")
+
+                   };
+                   reader.readAsDataURL(input.files[0]);
+
+               }
+
+           }
+
+
+
+
+
+
+       })
+
+   </script>
 
 </th:block>
-
-
 
 </body>
 </html>
