메인페이지 제작 장바구니 테이블, 주문 테이블 제작

--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -75,10 +75,15 @@
                             <input class="form-control imgInput "  id="formFilede" accept="image/*" name="multipartFile" type="file" >
                         </div>
                     </div>
-
+                        <!--저장버튼 목록버튼-->
                     <div class="col-12">
                        <button class="btn btn-dark">저장</button>
-                       <button type="button">목록</button>
+                       <button type="button" class="btn btn-dark listbtn">목록</button>
+                        <script>
+                            $(".listbtn").on("click", function () {
+                                location.href = "/admin/item/list"
+                            })
+                        </script>
                     </div>
                 </div>
             </div>
