--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -21,61 +21,40 @@
 
         <th:block th:each="orderHistDTO: ${orders.getContent()}">
 
-            <h4 th:text="${orderHistDTO.orderDate} + ' 주문'"></h4>
+            <h4 th:text="${#temporals.format(orderHistDTO.orderDate, 'yyyy-MM-dd HH:mm')} + ' 주문'"></h4>
             <div class="ms-3">
 
                 <th:block th:if="${orderHistDTO.orderStatus.name() == 'ORDER'}">
-                    <button> 주문취소</button>
+                    <button type="button" th:value="${orderHistDTO.orderID}" class="cancelbtn"> 주문취소</button>
                 </th:block>
                 <th:block th:unless="${orderHistDTO.orderStatus.name() == 'ORDER'}">
                     <h4>(취소 완료)</h4>
                 </th:block>
 
 
-                        <div class="card">
-                            <div class="row">
+                <div class="card">
+                    <div class="row">
 
-                                <th:block th:each="orderItemDTO: ${orderHistDTO.orderItemDTOList}">
-                                    <div class="col" >
-                                        <img  style="width: 100px;height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
-                                    </div>
+                        <th:block th:each="orderItemDTO: ${orderHistDTO.orderItemDTOList}">
+                            <div class="col" >
+                                <img  style="width: 100px;height: 100px" th:src="${orderItemDTO.imgUrl}" th:alt="${orderItemDTO.itemNm}">
+                            </div>
 
-                                    <div class="col">
-                                        <strong><span th:text="${orderItemDTO.itemNm}" ></span></strong>
-                                        <span th:text="${orderItemDTO.orderPrice} + '원'"></span>
-                                        <span th:text="${orderItemDTO.count} + '개'"></span>
-
-
-                                    </div>
-
-                                </th:block>
-
-                                <th:block th:with="start=${ (orders.number/maxPage)*maxPage+1}, end=(${(orders.totalPages == 0 )? 1 : (start + (maxPage -1 ) < orders.totalPages ? start + (maxPage -1 ) : orders.totalPages)})">
-
-                                    <nav aria-label="Page navigation example">
-                                        <ul class="pagination">
-                                            <li class="page-item">
-                                                <a class="page-link" href="#" aria-label="Previous">
-                                                    <span aria-hidden="true">&laquo;</span>
-                                                </a>
-                                            </li>
-                                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                            <li class="page-item">
-                                                <a class="page-link" href="#" aria-label="Next">
-                                                    <span aria-hidden="true">&raquo;</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-
-
-                                </th:block>
+                            <div class="col">
+                                <strong><span th:text="${orderItemDTO.itemNm}" ></span></strong>
+                                <span th:text="${orderItemDTO.orderPrice} + '원'"></span>
+                                <span th:text="${orderItemDTO.count} + '개'"></span>
 
 
                             </div>
-                        </div>
+
+                        </th:block>
+
+
+
+
+                    </div>
+                </div>
 
 
             </div>
@@ -83,9 +62,83 @@
 
         </th:block>
 
-    </th:block>
+        <th:block th:with="start=${ (orders.number/maxPage)*maxPage+1}, end=(${(orders.totalPages == 0 )? 1 : (start + (maxPage -1 ) < orders.totalPages ? start + (maxPage -1 ) : orders.totalPages)})">
 
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+
+                    <li class="page-item" th:classappend="${orders.number eq 0} ? 'disabled' : ''" >
+                        <a class="page-link" th:href="@{'/orders/' + ${orders.number -1}}" th:text="${page}">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+
+                    <th:block th:each="page : ${#numbers.sequence(start, end)}">
+
+                        <li class="page-item" th:classappend="${orders.number eq page -1} ? 'active' : ''">
+                            <a class="page-link" th:href="@{'/orders/' + ${page -1}}" th:text="${page}">1</a>
+                        </li>
+
+                    </th:block>
+
+
+
+
+                    <li class="page-item" th:classappend="${orders.number+1 ge orders.totalPages} ? 'disabled' : ''">
+                        <a class="page-link" th:href="@{'/orders/' + ${page +1}}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+
+        </th:block>
+
+    </th:block>
+    <script th:inline="javascript">
+        $(document).ready(function () {
+            $().on("click", function () {
+                //버튼을 클릭했을 때 이벤트 발생
+                //발생하는 이벤트는 함수호출
+                alert("주문취소를 진행합니다." + $(this).val())
+            })
+        })
+
+        function cancelOrder(orderId) {
+            let url ="/order/" + orderId + "/cancel";
+            let paramDate = {
+                orderId : orderId
+            }
+
+            $.ajax({
+
+                url : url,
+                type : "post",
+                data : paramDate,
+                dataType : "json",
+                success : function (result) {
+                    alert("주문이 취소 되었습니다")
+                    location.href = '/orders/' + [[${page}]]
+                },
+                error : function (result, status, error) {
+                        if (result.status =='401'){
+                            alert("로그인 후 이용해 주세요")
+                        }else {
+                            alert(result.responseText)
+                        }
+                    }
+
+            })
+        }
+
+
+
+    </script>
 </th:block>
+
+
+
 
 </body>
 </html>
